--- a/dissertation.bib
+++ b/dissertation.bib
@@ -6584,4 +6584,18 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/FZ6KXC2L/Collins et al. - 2009 - Adolescent Romantic Relationships.pdf}
 }
 
+@article{fisher2018,
+  langid = {english},
+  title = {Lack of Group-to-Individual Generalizability Is a Threat to Human Subjects Research},
+  issn = {0027-8424, 1091-6490},
+  url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1711978115},
+  doi = {10.1073/pnas.1711978115},
+  journaltitle = {Proceedings of the National Academy of Sciences},
+  urldate = {2018-06-19},
+  date = {2018-06-18},
+  pages = {201711978},
+  author = {Fisher, Aaron J. and Medaglia, John D. and Jeronimus, Bertus F.},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/JVQND3AN/Fisher et al. - 2018 - Lack of group-to-individual generalizability is a .pdf}
+}
+
 
